Fix layout bug

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -176,6 +176,7 @@ main {
 
 .container--narrow {
   width: 65ch;
+  max-width: 100%;
 }
 
 .flow > * {
